Interim commit to update layout, broken in-progress fix to data index

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -27,32 +27,18 @@ label.label:not(:last-child) {
 	display: block;
 }
 
-.header {
-	background-color: rgba(239, 241, 226, 1.00);
-	padding: 0;
+header {
+	height: 500px;
+	padding-top: 2.5rem;
+	background: url("./yellowknife.jpg") 25%;
 }
 
-.header--section {
-	margin-top: -1rem;
+header .titles {
+	text-shadow: 0 0 8px rgba(0, 0, 0, 1), 0 0 8px rgba(255, 255, 255, 1);
 }
 
-.header--section h1 {
-	padding-top: .8rem;
-}
-
-.header--logo {
-	float: left;
-	padding-right: 2rem;
-}
-
-.header--snap-link a {
-	height: 5.4em;
-	display: block;
-	z-index: 1000;
-}
-
-.header--snap-link img {
-	height: 5.4em;
+.titles h1, .titles h2 {
+	color: #fff;
 }
 
 .form label, .form input {
@@ -65,36 +51,18 @@ label.checkbox input, label.radio input {
 	margin-right: .5ex;
 }
 
-tspan.line:nth-child(1) {
-	font-weight: 900;
-	font-size: 18pt;
+footer {
+	box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.4);
 }
 
-.date-range-selector .rc-slider {
-	margin: 2rem 1rem;
+footer .logos.column {
+	text-align: right;
 }
-
-.rc-slider-handle {
-	width: 25px;
-	height: 25px;
-	margin-left: -15px;
-	margin-top: -11px;
-}
-
-.footer p {
-	width: 50%;
-	margin: 1em auto;
-}
-
-.footer a {
+footer .logos.column a img {
+	max-width: 90%;
 	display: inline-block;
+	margin-bottom: 1rem;
 }
-
-.footer a img {
-	height: 5em;
-	margin: 1em 1.5em;
-}
-
-._dash-undo-redo {
-	display: none;
+footer p {
+	width: 90%;
 }
